 - [ADDED]		Different ActionBar logo
 - [ADDED]		Toggle count stat page content when enabled or disabled
 - [FIXED]		-1 messages sent
 
 MessageCounter 2.2.67 [February 2014]
 - [FIXED]		Bugs in Sent Message counter
 
 MessageCounter 2.2.74 [March 2014]
 - [ADDED]		Notifiction on reaching cycle limit
 - [CHANGED]	Sent messages count ui tweaks
 - [CHANGED]	Unobstructed loading screen
 
 MessageCounter 2.2.85 [May 2014] 
 - [CHANGED]	Using Pager Tab Strip
 - [ADDED] 		Previous cycle stats
 - [CHANGED]	Sent Messages screen layout
 - [CHANGED]	Simplified UI
 
 MessageCounter 2.2.90 [June 2014]
 - [FIXED]		Service was not started after app update
 
------------------------------------
	Version 2.3
------------------------------------

 MessageCounter 2.3.12 [July 2014]
 - [ADDED]		Widget for messages sent
 - [CHANGED]	Settings icon
 - [CHANGED]	Settings menu to actionbar
 - [CHANGED]	UI Tweaks
 - [ADDED]		Widget update broadcast when sending message
 
 MessageCounter 2.3.16 [July 2014]
 - [FIXED]		Minor bug Fixes for Xperia and HTC devices
 - [CHANGED]	Counter fragment is main frgment

 MessageCounter 2.3.20 [August 2014]
 - [FIXED]		Minor bug Fixes as reported
 - [FIXED]		Fixed cycle limit -1 in widget
 
 MessageCounter 2.3.24 [October 2014]
 - [FIXED]		Minor bug fixes as reported
 
 ------------------------------------
	Version 3.0
 ------------------------------------
 MessageCounter 3.0.30 [December 2014] - Talisman (Material Design)
  - Redesign Counter fragment 
  - Use CardView
  - Removed Chart Fragment as it is a bit buggy
  - Use Toolbar on applicable screens
  - basic material design 
  - Message Counter is enabled by default
  
 MessageCounter 3.0.32 [December 2014] - Talisman (Material Design)
  - Removed Non Contact Messages option in settings
  - Fix for NoSuchMethodError for getMinimumHeight
  
 MessageCounter 3.0.35 [January 2015]
  - Use toolbar in SettingsActivity
  
 # to use tralisman_r2 branch for further development