@@ -204,3 +204,6 @@ MessageCounter 2.1.20 [December 2013]
   - Use toolbar in SettingsActivity
   
  # to use tralisman_r2 branch for further development
+ MessageCounter 3.0.50 [January 2015]
+  - Support for Nvigation Drawer
+  - Bring back Chart Fragment due to popular demand
